--- a/grc338/restaurantmenucss/style.css
+++ b/grc338/restaurantmenucss/style.css
@@ -41,7 +41,7 @@ h3 {
 	font-weight: bold;
 	text-transform: uppercase;
 	letter-spacing: .07em; /*Just an extra tracking for bold uppercase letters. Try 0.1em */
-	border-top: 1mm solid rgb(177, 0, 0);
+	border-top: 4px solid rgb(177, 0, 0);
 }
 
 h4 {
