--- a/grc338/css-mobile-first/lasagnastyle.css
+++ b/grc338/css-mobile-first/lasagnastyle.css
@@ -22,7 +22,7 @@ h1 {
 	font-family: Sutro, serif;  
     font-weight: 700;  
     font-style: normal;
-    line-height: 3rem;
+    line-height: 140%;
 }
 h2 {
     background-color: rgb(255, 137, 10);
