--- a/grc338/css-grid-layout/lasagnastyle.css
+++ b/grc338/css-grid-layout/lasagnastyle.css
@@ -3,7 +3,7 @@
 html, body, div, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit;} /*My edited version of the Eric Meyer’s reset tool. You may want to include this in all of your future CSS files. */
 
 div.container {
-    width: 80%;
+    max-width: 55em;
     margin: auto;
 }
 img {
@@ -25,14 +25,14 @@ body {
 }
 main {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 1fr 1fr;
     background-color: rgb(240, 240, 240);
 }
 
 h1 {
     background-color: rgb(255, 137, 10);
     color:rgb(240, 240, 240);
-	font-size: 3em;
+	font-size: 2.5em;
 	padding: 3rem 2rem 1rem; 
 	font-family: Sutro, serif;  
     font-weight: 700;  
@@ -42,7 +42,7 @@ h1 {
 h2 {
     background-color: rgb(255, 137, 10);
     color:rgb(255, 212, 166);
-	font-size: 2em;
+	font-size: 1.5em;
 	padding: 1rem 2rem 2rem; 
 	font-family: Sutro, serif;  
     font-weight: 300;  
