--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -7,7 +7,7 @@ html,body,div,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acr
 	font: inherit;
 }
 body {
-	background-color: rgb(235,239,238) ;
+	background-color: #ebefee;
 }
 
 div.container,
