--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -7,233 +7,380 @@ html,body,div,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acr
 	font: inherit;
 }
 body {
-	background-color: #EBEFEE ;
+    background-color: #EBEFEE;
 }
 
 div.container,
 div.home-container {
-	max-width: 40em;
-	margin: auto;
+    max-width: 40em;
+    margin: auto;
+}
+
+ul {
+    list-style-type: none;
 }
 
 img {
-	width: 100%;
-	display: block;
+    width: 100%;
+    display: block;
 }
 
 header {
-	margin: 0 0rem 1rem;
+    margin: 0 0rem 1rem;
 }
 
 h1 {
-	margin: auto;
-	padding: 1rem;
-	width: 11rem;
+    margin: auto;
+    padding: 1rem;
+    width: 11rem;
 }
 
 h2 {
-	font-family: "fields", sans-serif;
-	font-weight: 700;
-	font-style: normal;
-	margin: 0.1rem 0.5rem 0rem;
-	color: #718478;
+    font-family: "fields", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    margin: 0.1rem 0.5rem 0rem;
+    color: #718478;
 }
 
+h2.newsletter-h2 {
+    font-size: 2rem;
+    color: #184644;
+}
+
+h2.newsletter {
+    font-size: 1.3rem;
+    margin: 1rem 0rem;
+    color: #184644;
+}
+
+
 p {
-	font-family: "owners-text", sans-serif;
-	font-weight: 400 ;
-	font-size: 1.1rem;
-	margin: 0 0.5rem 2rem;
-	color: #184644;
-	line-height: 1.25rem;
+    font-family: "owners-text", sans-serif;
+    font-weight: 400;
+    font-size: 1.1rem;
+    margin: 0 0.5rem 2rem;
+    color: #184644;
+    line-height: 1.25rem;
 }
 
 a {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 nav ul li a {
-	font-family: "fields", sans-serif;
-	font-weight: 700;
-	font-size: 1.3rem;
-	font-style: normal;
-	color: #718478;
+    font-family: "fields", sans-serif;
+    font-weight: 700;
+    font-size: 1.3rem;
+    font-style: normal;
+    color: #718478;
 }
 
 nav ul li a:hover {
-	color:#184644 ;
+    color: #184644;
 }
 
 nav ul li {
-	font-size: 1.2rem;
-	list-style-type: none;
+    font-size: 1.2rem;
 }
 
 section.mainstory h2 {
-	font-size: 3rem;
+    font-size: 3rem;
 }
 
 section.secondary h2 {
-	font-size: 1.75rem;
+    font-size: 1.75rem;
 }
 
 aside section.secondary h2 {
-	color: #184644;
-	font-size: 1.2rem;
+    color: #184644;
+    font-size: 1.2rem;
 }
 
 section.tertiary h2 {
-	color: #184644;
-	font-size: 1.2rem;
-	border-top: 4px double;
-	border-color: #4B7084;
-	padding-top: 0.5rem;
+    color: #184644;
+    font-size: 1.2rem;
+    border-top: 4px double;
+    border-color: #4B7084;
+    padding-top: 0.5rem;
 }
 
 
 article h2 {
-	font-size: 3rem;
-	margin-top: 1rem;
+    font-size: 3rem;
+    margin-top: 1rem;
 }
 
 figcaption {
-	font-family: "owners-text", sans-serif;
-	font-weight: 400;
-	font-style: italic;
-	margin: 0.25rem 0.5rem 1rem;
-	color: #718478;
-	line-height: 1.25rem;
+    font-family: "owners-text", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    margin: 0.25rem 0.5rem 1rem;
+    color: #718478;
+    line-height: 1.25rem;
 }
 
 aside {
-	background: #C6D2CF;
-	padding: 0.5rem;
+    background: #C6D2CF;
+    padding: 0.5rem;
 }
 
 aside p {
-	font-size: 1rem;
+    font-size: 1rem;
 }
 
 footer {
-	background: #718478;
-	margin: 0;
-	font-family: "owners-text", sans-serif;
-	font-weight: 400 ;
+    background: #718478;
+    margin: 0;
+    font-family: "owners-text", sans-serif;
+    font-weight: 400;
 }
 
 footer p {
-	color: rgb(255, 255, 255);
-	padding: 0.75rem;
-	margin: 0 0.5rem;
+    color: rgb(255, 255, 255);
+    padding: 0.75rem;
+    margin: 0 0.5rem;
 }
 
 @media only screen and (min-width: 35em) {
-	nav ul li {
-		display: inline-block;
-		margin: 0.5rem 1.5rem 0 0;
-	}
+    nav ul li {
+        display: inline-block;
+        margin: 0.5rem 1.5rem 0 0;
+    }
 
-	header,
-	h2,
-	p,
-	figcaption,
-	footer p {
-		margin-left: 0;
-	}
+    header,
+    h2,
+    p,
+    figcaption,
+    footer p {
+        margin-left: 0;
+    }
 
-	h1 {
-		margin: auto;
-	}
+    h1 {
+        margin: auto;
+    }
 }
+
+
+/* Big newsletter formatting */
+section.personal-info ul li input[type="text"],
+section ul li input[type="email"],
+section ul li input[type="tel"],
+section ul li select {
+    flex: 4 1 30rem;
+    margin: .5rem 0 .5rem 0;
+}
+
+.subscription section {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    background-color: #C6D2CF;
+}
+
+.subscription section p {
+    margin-top: 0;
+}
+
+section.personal-info ul li {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+section.personal-info ul li label {
+    flex: 0 0 10rem;
+    margin: .5rem 0 .5rem 0;
+}
+
+section.submit ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+section.submit ul li {
+    margin: 0 1rem 0 0;
+    flex: 1 0 15rem;
+}
+
+section.method ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+section.method ul li {
+    margin: 0 1rem 0 0;
+    flex: 1 0 15rem;
+}
+
+
+.comments textarea {
+    padding: 0.5rem;
+    font-family: "owners-text", sans-serif;
+    font-weight: 400;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+
+div.subscription {
+    grid-column: 1/3;
+}
+
+div.subscription li {
+    color: #184644;
+    font-family: "fields", sans-serif;
+    font-weight: 700;
+    padding-bottom: .5rem;
+}
+
+.comments {
+    color: #184644;
+    font-family: "fields", sans-serif;
+    font-weight: 700;
+    padding-bottom: 1.5em;
+}
+
+/* Big photo gallery formatting */
+h2.gallery {
+	font-size: 2rem;
+}
+
+div.gallery {
+    max-width: 60em;
+    margin: 0 auto;
+}
+main.gallery {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: calc(120% + 3em);
+    padding-top: 1rem;
+}
+figure.gallery {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    margin: 0;
+    transition: opacity 0.5s;
+}
+nav.gallery {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 0.2em;
+}
+
+input:nth-of-type(1):checked~main figure:nth-of-type(1),
+input:nth-of-type(2):checked~main figure:nth-of-type(2),
+input:nth-of-type(3):checked~main figure:nth-of-type(3),
+input:nth-of-type(4):checked~main figure:nth-of-type(4),
+input:nth-of-type(5):checked~main figure:nth-of-type(5),
+input:nth-of-type(6):checked~main figure:nth-of-type(6),
+input:nth-of-type(7):checked~main figure:nth-of-type(7),
+input:nth-of-type(8):checked~main figure:nth-of-type(8),
+input:nth-of-type(9):checked~main figure:nth-of-type(9) {
+    opacity: 1;
+}
+
+input {
+    display: none;
+}
+div.photogallery nav img {
+    margin: auto;
+    object-fit: cover;
+}
+
+
 
 @media only screen and (min-width: 60em) {
 
-	div.home-container {
-		max-width: 80rem;
-		padding: 0 1rem;
-		display: grid;
-		grid-template-columns: 3fr 1fr;
-		grid-gap: 1rem;
-	}
+    div.home-container {
+        max-width: 80rem;
+        padding: 0 1rem;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        grid-gap: 1rem;
+    }
 
-	div.container {
-		max-width: 60rem;
-		padding: 0 1rem;
-		display: grid;
-		grid-template-columns: 3fr 1fr;
-		grid-gap: 1rem;
-	}
 
-	header,
-	footer {
-		grid-column: 1/3;
-	}
+    div.container {
+        max-width: 60rem;
+        padding: 0 1rem;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        grid-gap: 1rem;
+    }
 
-	div.home-container main {
-		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		grid-gap: 1rem;
-	}
+    header,
+    footer {
+        grid-column: 1/3;
+    }
 
-	div.home-container aside {
-		background: none;
-		padding: 0;
-		margin-top: 0;
-	}
+    div.home-container main {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1rem;
+    }
 
-	section.mainstory {
-		grid-column: 2/4;
-		grid-row: 1/3;
-		display: flex;
-	}
+    div.home-container aside {
+        background: none;
+        padding: 0;
+        margin-top: 0;
+    }
 
-	section.mainstory a {
-		flex: 1 0 12rem;
-		display: flex;
-		flex-direction: column;
-	}
+    section.mainstory {
+        grid-column: 2/4;
+        grid-row: 1/3;
+        display: flex;
+    }
 
-	section.mainstory a figure {
-		flex: 1 0 12rem;
-		display: flex;
-	}
+    section.mainstory a {
+        flex: 1 0 12rem;
+        display: flex;
+        flex-direction: column;
+    }
 
-	section.mainstory a figure img {
-		object-fit: cover;
-	}
+    section.mainstory a figure {
+        flex: 1 0 12rem;
+        display: flex;
+    }
 
-	section.mainstory a h2 {
-		flex: 0 0 1rem;
-	}
+    section.mainstory a figure img {
+        object-fit: cover;
+    }
 
-	section.mainstory a p {
-		flex: 0 0 4rem;
-	}
+    section.mainstory a h2 {
+        flex: 0 0 1rem;
+    }
 
-	section.secondary {
-		display: flex;
-	}
+    section.mainstory a p {
+        flex: 0 0 4rem;
+    }
 
-	section.secondary a {
-		flex: 1 0 12rem;
-		display: flex;
-		flex-direction: column;
-	}
+    section.secondary {
+        display: flex;
+    }
 
-	section.secondary a figure {
-		flex: 1 0 12rem;
-		display: flex;
-	}
+    section.secondary a {
+        flex: 1 0 12rem;
+        display: flex;
+        flex-direction: column;
+    }
 
-	section.secondary a figure img {
-		object-fit: cover;
-	}
+    section.secondary a figure {
+        flex: 1 0 12rem;
+        display: flex;
+    }
 
-	section.secondary a h2 {
-		flex: 0 0 1rem;
-	}
+    section.secondary a figure img {
+        object-fit: cover;
+    }
 
-	section.secondary a p {
-		flex: 0 0 4rem;
-	}
+    section.secondary a h2 {
+        flex: 0 0 1rem;
+    }
+
+    section.secondary a p {
+        flex: 0 0 4rem;
+    }
 }
