--- a/grc322/type-comparison/style.css
+++ b/grc322/type-comparison/style.css
@@ -15,77 +15,76 @@ h1, h2, h3, h4, p, ul, ol, li {
 	font-size: 1em; 
 	font-weight: normal;
 }
-
 body {
-	background-color: #EBEFEE;
+	background-color: #ebefee;
 	color: #303030;
 	font-family: "reiher-headline", sans-serif;
 	font-weight: 400;
 	font-style: normal;
-}
-
-div.container {
+  }
+  
+  div.container {
 	max-width: 40em;
 	margin: auto;
 	padding: 1em;
-}
-
-img {
+  }
+  
+  img {
 	width: 100%;
-}
-
-figure {
+  }
+  
+  figure {
 	margin: 1em 0;
-}
-p {
-	margin: 0em 0em .5em ;
+  }
+  p {
+	margin: 0em 0em 0.5em;
 	line-height: 1.45em;
-}
-h1 {
-	font-size: 2.75em; 
+  }
+  h1 {
+	font-size: 2.75em;
 	font-weight: 700;
-}
-
-h2 {
-	font-size: 2em; 
+  }
+  
+  h2 {
+	font-size: 2em;
 	font-weight: 700;
 	margin: 2em 0em 1em;
-}
-
-h3 {
-	font-size: 1.5em; 
+  }
+  
+  h3 {
+	font-size: 1.5em;
 	font-weight: 700;
 	margin: 1em 0em 1em;
-}
-
-h3.Trade {
+  }
+  
+  h3.Trade {
 	font-family: "trade-gothic-next", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    text-decoration-line: underline;
-    text-decoration-color: #7193ff;
-    text-decoration-thickness: .1em;
-}
-
-h3.Franklin {
+	font-weight: 700;
+	font-style: normal;
+	text-decoration-line: underline;
+	text-decoration-color: #7193ff;
+	text-decoration-thickness: 0.1em;
+  }
+  
+  h3.Franklin {
 	font-family: "franklin-gothic", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    text-decoration-line: underline;
-    text-decoration-color: #f7a348;
-    text-decoration-thickness: .1em;
-}
-
-img {
+	font-weight: 700;
+	font-style: normal;
+	text-decoration-line: underline;
+	text-decoration-color: #f7a348;
+	text-decoration-thickness: 0.1em;
+  }
+  
+  img {
 	width: 100%;
 	display: block;
-}
-
-div.grid {
+  }
+  
+  div.grid {
 	display: grid;
 	grid-template-columns: 50% 50%;
 	grid-column-gap: 1em;
-}
-figcaption {
+  }
+  figcaption {
 	margin: 1em 0em;
-}
+  }  
